fix two bugs: - the until cannot be used when wishLimitNum is less than 99 - some text is covered on page artifact info

--- a/src/plugins/genshin/styles/info-artifact/app.css
+++ b/src/plugins/genshin/styles/info-artifact/app.css
@@ -70,6 +70,7 @@
 }
 
 .info-artifact > main > .main-content {
+	position: relative;
 	padding: 6px 0;
 	border-bottom: 1px solid var(--shadow-color);
 }
